force-app/main/default/objects/Folder__c/Folder__c.object-meta.xml
<CustomObject>
    <description>A Mirador "Carpeta": a recursive organisational node in the space plan. Replaces the old Site/Place levels. Holds spaces (Space__c) and nests other folders via ParentAppId__c.</description>
    <label>Folder</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>