force-app/main/default/objects/Folder__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the Folder (and everything under it) shows up in the live home/space views. Defaults to true; inactive folders and anything under them are hidden from those views.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>