force-app/main/default/objects/Folder__c/fields/ActiveFolderId__c.field-meta.xml
<CustomField>
    <fullName>ActiveFolderId__c</fullName>
    <description>Client-side id of the folder the editor last had active (SpacePlanData.activeFolderId). Stored as the app's own string id (e.g. "folder_xxx"), not a Salesforce record id. Null/blank when none.</description>
    <label>Active Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>