force-app/main/default/objects/Folder__c/fields/ActiveSpaceId__c.field-meta.xml
<CustomField>
    <fullName>ActiveSpaceId__c</fullName>
    <description>Client-side id of the space the editor last had selected (SpacePlanData.activeSpaceId). Stored as the app's own string id (e.g. "space_xxx"), not a Salesforce record id. Null/blank when none.</description>
    <label>Active Space Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>