force-app/main/default/objects/Folder__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Folder image as a base64 data-URL. Client caps it at 120000 chars so it always fits this field.</description>
    <label>Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>