force-app/main/default/objects/Folder__c/fields/ParentAppId__c.field-meta.xml
<CustomField>
    <fullName>ParentAppId__c</fullName>
    <description>AppId of the parent Folder, or blank for a top-level (root) folder. The tree is rebuilt in memory from AppId/ParentAppId so it survives the round-trip without Salesforce record ids.</description>
    <label>Parent App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>