force-app/main/default/objects/Folder__c/fields/SchemaVersion__c.field-meta.xml
<CustomField>
    <fullName>SchemaVersion__c</fullName>
    <description>Forward-compatible schema version of the persisted space plan (SpacePlanData.v). Used to migrate older payloads on read.</description>
    <label>Schema Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>